--- a/SistemaCadastrosAcademia/nbproject/project.properties
+++ b/SistemaCadastrosAcademia/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SistemaAcademia
+application.vendor=luan_
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,8 +33,9 @@ dist.jar=${dist.dir}/SistemaAcademia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaAcademia
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-9.5.0.jar=..\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
+file.reference.mysql-connector-j-9.5.0.jar=..\\..\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
